--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,64 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{wang-etal-2023-listen,
+    title = "Listen, Decipher and Sign: Toward Unsupervised Speech-to-Sign Language Recognition",
+    author = "Wang, Liming  and
+      Ni, Junrui  and
+      Gao, Heting  and
+      Li, Jialu  and
+      Chang, Kai Chieh  and
+      Fan, Xulin  and
+      Wu, Junkai  and
+      Hasegawa-Johnson, Mark  and
+      Yoo, Chang",
+    editor = "Rogers, Anna  and
+      Boyd-Graber, Jordan  and
+      Okazaki, Naoaki",
+    booktitle = "Findings of the Association for Computational Linguistics: ACL 2023",
+    month = jul,
+    year = "2023",
+    address = "Toronto, Canada",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.findings-acl.424",
+    doi = "10.18653/v1/2023.findings-acl.424",
+    pages = "6785--6800",
+    pdf={2023.findings-acl.424.pdf}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
+@INPROCEEDINGS{10248180,
+  author={Wang, Zhepei and Subakan, Cem and Subramani, Krishna and Wu, Junkai and Tavares, Tiago and Ayres, Fabio and Smaragdis, Paris},
+  booktitle={2023 IEEE Workshop on Applications of Signal Processing to Audio and Acoustics (WASPAA)}, 
+  title={Unsupervised Improvement of Audio-Text Cross-Modal Representations}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={1-5},
+  doi={10.1109/WASPAA58266.2023.10248180},
+  pdf={2305.01864.pdf},
+  code={https://github.com/zhepeiw/clap_curation}}
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
+@ARTICLE{9987644,
+  author={Wang, Zhepei and Subakan, Cem and Jiang, Xilin and Wu, Junkai and Tzinis, Efthymios and Ravanelli, Mirco and Smaragdis, Paris},
+  journal={IEEE Signal Processing Letters}, 
+  title={Learning Representations for New Sound Classes With Continual Self-Supervised Learning}, 
+  year={2022},
+  volume={29},
+  number={},
+  pages={2607-2611},
+  doi={10.1109/LSP.2022.3229643},
+  pdf={2205.07390.pdf},
+  code={https://github.com/zhepeiw/cssl_sound}}
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
+@INPROCEEDINGS{9914695,
+  author={Wu, Junkai and Casebeer, Jonah and Bryan, Nicholas J. and Smaragdis, Paris},
+  booktitle={2022 International Workshop on Acoustic Signal Enhancement (IWAENC)}, 
+  title={Meta-Learning for Adaptive Filters with higher-order Frequency Dependencies}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={1-5},
+  doi={10.1109/IWAENC53105.2022.9914695},
+  pdf={2209.09955.pdf},
+  code={https://github.com/adobe-research/MetaAF/tree/main/zoo/hometa_aec},
+  selected={true}}
