--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,33 @@
 ---
 ---
 
+
+
+@INPROCEEDINGS{wu2024justasrllm,
+  author={Junkai Wu and Xulin Fan and Bo-Ru Lu and Xilin Jiang and Nima Mesgarani and Mark Hasegawa-Johnson and Mari Ostendorf},
+  booktitle={2024 IEEE Spoken Language Technology Workshop (SLT)}, 
+  title={Just ASR + LLM? A Study on Speech Large Language Models' Ability to Identify and Understand Speaker in Spoken Dialogue}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={},
+  doi={},
+  pdf={2409.04927v3.pdf},
+  selected={true}}
+
+@INPROCEEDINGS{10448040,
+  author={Casebeer, Jonah and Wu, Junkai and Smaragdis, Paris},
+  booktitle={ICASSP 2024 - 2024 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, 
+  title={Meta-AF Echo Cancellation for Improved Keyword Spotting}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={676-680},
+  pdf={2312.10605v1.pdf},
+  keywords={Training;Echo cancellers;Adaptive filters;Training data;Speech recognition;Signal processing;Acoustics;adaptive filtering;keyword spotting;learning to learn;meta-learning;acoustic echo cancellation},
+  doi={10.1109/ICASSP48485.2024.10448040}}
+
+
 @inproceedings{wang-etal-2023-listen,
     title = "Listen, Decipher and Sign: Toward Unsupervised Speech-to-Sign Language Recognition",
     author = "Wang, Liming  and
